--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full overflow-hidden dark">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -14,7 +14,7 @@
     %sveltekit.head%
   </head>
 
-  <body data-theme="skeleton" data-sveltekit-preload-data="hover" class="h-full overflow-hidden">
-    %sveltekit.body%
+  <body data-theme="skeleton" data-sveltekit-preload-data="hover">
+    <div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
   </body>
 </html>
